--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.25",
     "@react-navigation/native-stack": "^7.8.6",
+    "@supabase/supabase-js": "2.84.0",
+    "dotenv": "^17.2.3",
     "expo": "~54.0.29",
     "expo-constants": "~18.0.12",
     "expo-font": "~14.0.10",
